<resources>
    <string name="app_name">ВЦ омских железнодорожников</string>
    <string name="name_section_event">События</string>
    <string name="name_section_exhibit">Экспонаты</string>
    <string name="name_section_game">Игры</string>
    <string name="name_section_info">Контакты</string>
    <string name="name_section_interesting">Интересные факты</string>
    <string name="name_section_review">Отзывы</string>

    <string name="home_slider_placeholder_description">Внешний вид выставочного центра омских железнодорожников</string>

    <string name="game_list_image_description">game icon</string>
    <string name="game_list_type">Тип: %s</string>
    <string name="game_list_difficulty">Сложность:</string>

    <string name="game_rules_title">Правила игры</string>
    <string name="game_rules_comment_title">Подсказка</string>
    <string name="game_rules_go">Начать</string>
    <string name="game_rules_question_number">Количество вопросов: %1$d.</string>
    <string name="current_question">Текущий вопрос:</string>
    <string name="right_answers">Правильных ответов:</string>
    <string name="game_time">Время игры:</string>
    <string name="replay">Переиграть игру</string>
    <string name="to_game_list">К списку игр</string>
    <string name="game_quiz_next">Далее</string>
    <string name="game_comparison">%1$d / %2$d</string>

    <string name="game_quest_scip">Пропустить</string>
    <string name="game_quest_scan">QR код</string>
    <string name="game_quest_null_question">Найди предмет:</string>
    <string name="game_rebus_test">Проверить</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_adding_nickname">Имя Фамилия</string>
    <string name="review_adding_text">Текст отзыва</string>
    <string name="review_adding_send">Отправить</string>
    <string name="review_adding_title">Оставить отзыв</string>
    <string name="review_expand">Показать полностью</string>

    <string name="fullscreen_image_description">fullscreen image</string>
    <string name="camera_back_description">camera exit</string>
    <string name="fab_flash_description">flashlight</string>
    <string name="fab_camera_description">take a photo</string>
    <string name="fab_switch_camera_description">main / front camera switch</string>
    <string name="event_list_image_description">event icon</string>
    <string name="game_list_difficulty_image_description">game difficulty</string>
    <string name="home_section_image_description">home section icon</string>
    <string name="card_review_image_photo_description">review photo</string>
    <string name="card_review_images_photo_description">photo of added review</string>
    <string name="card_review_images_remove_description">deleting a photo of the added review</string>
    <string name="page_detail_background_description">web view background</string>
    <string name="game_quest_background_description">game quest background</string>
    <string name="game_quest_image_description">game quest image</string>
    <string name="game_quiz_background_description">game quiz background</string>
    <string name="game_quiz_image_description">game quiz image</string>
    <string name="game_rules_background_description">game rules background</string>
    <string name="game_result_character_description">game result character</string>
    <string name="game_rules_character_description">game rules character</string>
    <string name="review_fab_description">adding a review</string>
    <string name="review_adding_camera_description">open the camera</string>
    <string name="game_result_background_description">game result background</string>
    <string name="game_rebus_background_description">game rebus background</string>
    <string name="game_rebus_image_description">game rebus image</string>
    <string name="game_rebus_answer">Напишите сюда ответ</string>

    <string name="theme_light">Светлая тема</string>
    <string name="theme_dark">Темная тема</string>
    <string name="theme_system">Как в системе</string>
    <string name="theme_battery">В зависимости от энергосбережения</string>

    <string name="night_mode_test">light</string>

</resources>