<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.omsk.railwaymuseum.viewmodels.GameQuestionsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/game_rebus_background"
            tools:src="@drawable/app_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/game_rebus_background_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/game_rebus_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            >

            <TextView
                android:id="@+id/game_rebus_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Ребусы по железной дороге"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/game_rebus_question_info_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_question"
                tools:text="Текущий вопрос:"
                app:layout_constraintBottom_toBottomOf="@+id/game_rebus_question_info"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/game_rebus_question_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{@string/game_comparison(viewModel.questionIndex, viewModel.questionsNumber)}"
                tools:text="5 / 10"
                app:layout_constraintTop_toBottomOf="@+id/game_rebus_name"
                app:layout_constraintStart_toStartOf="@+id/game_rebus_right_answer"/>

            <TextView
                android:id="@+id/game_rebus_right_answer_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_answers"
                tools:text="Правильных ответов:"
                app:layout_constraintTop_toBottomOf="@+id/game_rebus_question_info"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/game_rebus_right_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/game_comparison(viewModel.rightAnswerNumber, viewModel.questionIndex - 1)}"
                tools:text="3/4"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/game_rebus_question_info"
                app:layout_constraintStart_toEndOf="@+id/game_rebus_right_answer_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_time"
                tools:text="Время игры:"
                app:layout_constraintTop_toBottomOf="@+id/game_rebus_right_answer"
                app:layout_constraintStart_toStartOf="parent"/>

            <Chronometer
                android:id="@+id/game_rebus_chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12:55"
                style="@style/textViewDefault"
                app:layout_constraintTop_toBottomOf="@+id/game_rebus_right_answer"
                app:layout_constraintStart_toStartOf="@+id/game_rebus_right_answer"/>

            <ImageView
                android:id="@+id/game_rebus_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                tools:src="@drawable/home_placeholder"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                gameQuizImage="@{viewModel.currentGameQuestion.image}"
                maxHeightDp="@{150}"
                app:layout_constraintTop_toBottomOf="@+id/game_rebus_chronometer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/game_rebus_image_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/game_rebus_answer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/rebus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/game_rebus_answer_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/game_rebus_answer"
                    android:inputType="text"
                    android:maxLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_rebus_scip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:text="@string/game_quest_scip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/game_rebus_next"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_rebus_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:text="@string/game_rebus_test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/game_rebus_scip"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>