<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/game_rules_background"
            tools:src="@drawable/game_rules_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/game_result_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Викторина по Великой Отечественной Войне в картинках"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/game_result_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_answers"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/game_result_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/game_result_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5 / 10"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/game_result_number_text"
            app:layout_constraintStart_toEndOf="@+id/game_result_number_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_time"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/game_result_number_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <Chronometer
            android:id="@+id/game_result_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15:12"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/game_result_number_text"
            app:layout_constraintStart_toStartOf="@+id/game_result_number" />

        <ImageView
            android:id="@+id/game_result_character"
            tools:src="@drawable/game_rules_character_good"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toTopOf="@+id/game_rules_replay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_rules_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/replay"
            app:backgroundTint="@color/dark_green_transparent"
            app:strokeColor="#aaffffff"
            app:strokeWidth="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/game_rules_game_list"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_rules_game_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/to_game_list"
            app:backgroundTint="@color/dark_green_transparent"
            app:strokeColor="#aaffffff"
            app:strokeWidth="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/game_rules_replay"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>