<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.omsk.railwaymuseum.viewmodels.ReviewViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/review_adding_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/review_adding_help"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/review_adding_keyboard_hide"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:src="@drawable/keyboard_hide"
            app:layout_constraintBottom_toBottomOf="@+id/review_adding_help"
            app:layout_constraintStart_toEndOf="@+id/review_adding_help"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/review_adding_input_layout_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:startIconDrawable="@drawable/keyboard_hide"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/review_adding_help"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/review_adding_text_input_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/review_adding_nickname"
                android:inputType="text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/review_adding_input_layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:startIconDrawable="@drawable/keyboard_hide"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/review_adding_input_layout_nickname"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/review_adding_text_input_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/review_adding_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/review_adding_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_adding_send"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_adding_input_layout_text"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>