<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.omsk.railwaymuseum.viewmodels.GameQuestionsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/game_quest_background"
            tools:src="@drawable/app_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/game_quest_scan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            >

            <TextView
                android:id="@+id/game_quest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Викторина по Великой Отечественной Войне в картинках"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/game_quest_question_info_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_question"
                tools:text="Текущий вопрос:"
                app:layout_constraintTop_toTopOf="@+id/game_quest_question_info"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/game_quest_question_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@{@string/game_comparison(viewModel.questionIndex, viewModel.questionsNumber)}"
                tools:text="5 / 10"
                app:layout_constraintTop_toBottomOf="@+id/game_quest_name"
                app:layout_constraintStart_toEndOf="@+id/game_quest_question_info_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_time"
                tools:text="Время игры:"
                app:layout_constraintTop_toBottomOf="@+id/game_quest_question_info"
                app:layout_constraintStart_toStartOf="parent"/>

            <Chronometer
                android:id="@+id/game_quest_chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12:55"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/game_quest_question_info"
                app:layout_constraintStart_toStartOf="@+id/game_quest_question_info"/>

            <TextView
                android:id="@+id/game_quest_current_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                tools:text="Здесь будет написан вопрос"
                gameQuestQuestion="@{viewModel.currentGameQuestion.question}"
                app:layout_constraintTop_toBottomOf="@+id/game_quest_chronometer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/game_quest_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                tools:src="@drawable/home_placeholder"
                android:adjustViewBounds="true"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                gameQuizImage="@{viewModel.currentGameQuestion.image}"
                maxHeightDp="@{250}"
                app:layout_constraintTop_toBottomOf="@+id/game_quest_current_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_quest_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/game_quest_scan"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>