<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.omsk.railwaymuseum.viewmodels.GameRulesViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/game_rules_background"
            tools:src="@drawable/app_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/game_rules_character"
            gameRulesCharacter="@{viewModel.response.type}"
            tools:src="@drawable/game_rules_character_quest"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:layout_gravity="bottom|center_horizontal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/game_rules_constraint_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/game_rules_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:background="@color/dark_green_transparent"
                android:textSize="25sp"
                tools:text="Викторина о ВОВ"
                android:text="@{viewModel.response.name}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/game_rules_constraint_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/dark_green_transparent"
            app:layout_constraintTop_toBottomOf="@id/game_rules_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/game_rules_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="13dp"
                android:text="@string/game_rules_title"
                android:textAlignment="center"
                android:textColor="#fff"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/game_rules_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                android:textColor="#fff"
                tools:text="Здесь будут написаны правила игры в несколько строчек"
                android:text="@{@string/game_rules_description(viewModel.response.rules, viewModel.response.questionsNumber)}"
                app:layout_constraintTop_toBottomOf="@id/game_rules_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/game_rules_comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="13dp"
                android:text="@string/game_rules_comment_title"
                android:textAlignment="center"
                android:textColor="#fff"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/game_rules_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/game_rules_comment_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                android:textColor="#fff"
                tools:text="Здесь будут написан текст подсказки"
                android:text="@{viewModel.response.comment}"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/game_rules_comment_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/game_rules_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:paddingHorizontal="25dp"
                android:paddingVertical="15dp"
                android:text="@string/game_rules_go"
                app:backgroundTint="@color/dark_green_transparent"
                app:strokeColor="#aaffffff"
                app:strokeWidth="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>